--- a/css/style.css
+++ b/css/style.css
@@ -315,14 +315,12 @@ body {
   animation: bouncing 1.5s infinite;
 }
 /* end landing */
-/* start articles */
+/* Start Articles */
 .articles {
-  padding: var(--main-padding-top);
-  padding: var(--main-padding-bottom);
+  padding-top: var(--main-padding-top);
+  padding-bottom: var(--main-padding-bottom);
   position: relative;
-  z-index: 1;
 }
-
 .articles .container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -333,19 +331,26 @@ body {
   background-color: white;
   border-radius: 6px;
   overflow: hidden;
-  transition: transform var(--main-transition),
-    box-shadwo var(--main-transition);
+  transition: transform var(--main-transition), box-shadow var(--main-transition);
 }
 .articles .box:hover {
   transform: translateY(-10px);
   box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
 }
-
 .articles .box img {
+  width: 100%;
   max-width: 100%;
 }
 .articles .box .content {
   padding: 20px;
+}
+.articles .box .content h3 {
+  margin: 0;
+}
+.articles .box .content p {
+  margin: 10px 0 0;
+  line-height: 1.5;
+  color: #777;
 }
 .articles .box .info {
   padding: 20px;
@@ -354,27 +359,17 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-.articles .box .content h3 {
-  margin: 0;
-}
-.articles .box .content p {
-  margin: 10 0 0 0;
-  line-height: 1.5;
-  color: #777;
-}
-.articles .box .info i {
-  color: var(--main-color);
-}
 .articles .box .info a {
   color: var(--main-color);
   font-weight: bold;
 }
+.articles .box .info i {
+  color: var(--main-color);
+}
 .articles .box:hover .info i {
-  -webkit-animation: moving-arrow 0.6s linear infinite;
   animation: moving-arrow 0.6s linear infinite;
 }
-
-/* end articales */
+/* End Articles */
 /* start gallery */
 .gallery {
   padding-top: var(--main-padding-top);
